--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,18 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <p *ngIf="!loadedPosts && !isFetching">No posts available!</p>
+      <ul class="list-group" *ngIf="loadedPosts && !isFetching">
+        <li class="list-group-item" *ngFor="let post of loadedPosts">
+          <h4>{{ post.title }}</h4>
+          <p>{{ post.content }}</p>
+        </li>
+      </ul>
+      <div
+        *ngIf="isFetching"
+        class="spinner-border text-primary"
+        role="status">
+      </div>
     </div>
   </div>
 </div>
