Title: Add Error Handling and Display in App Component
Description:
This commit introduces error handling to the 'app.component.ts' and 'app.component.html' files in an Angular application. The changes ensure that an appropriate error message is displayed to the user when there is a failure in fetching posts.

Changes include:
- Added an 'error' property in 'AppComponent' in 'app.component.ts' to store the error message.
- Modified the subscription to 'fetchPosts()' in 'AppComponent' to handle and store errors in the 'error' property.
- Added a new conditional section in 'app.component.html' that displays an error message when the 'error' property is populated.
- Updated the loading spinner to be displayed only when there is no error, ensuring that the spinner and the error message are not displayed simultaneously.

This enhancement in error handling ensures that the users are informed of any issues when fetching posts, improving the overall user experience.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,9 +59,15 @@
         </li>
       </ul>
       <div
-        *ngIf="isFetching"
+        *ngIf="isFetching && !error"
         class="spinner-border text-primary"
         role="status">
+      </div>
+      <div
+      class="alert alert-danger"
+      *ngIf="error">
+        <h3>An Error occured!</h3>
+        <p>{{ error }}</p>
       </div>
     </div>
   </div>
