Title: Implement Retry Mechanism on Error in AppComponent
Description:
This commit adds a functionality for retrying the data fetching process in the event of an error in the 'app.component.html' and 'app.component.ts' files of the Angular application. It ensures that the user has an option to retry the process without refreshing the entire page.

Key Changes:

- A 'Try Again' button has been added to the error message display in 'app.component.html'.
- A new method 'onHandleError' has been implemented in 'app.component.ts' which resets the error and calls the method to fetch the posts again when the 'Try Again' button is clicked.
- Set 'isFetching' to false when an error occurs, to hide the loading spinner.
- In 'posts.service.ts', error handling has been further improved with a catchError operator, which could be used for sending errors to an analytics server or perform other backend tasks.

This additional functionality improves user experience by allowing users to easily retry data fetching in case of errors.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,6 +68,10 @@
       *ngIf="error">
         <h3>An Error occured!</h3>
         <p>{{ error }}</p>
+        <button
+          class="btn btn-danger"
+          (click)="onHandleError()">Try again
+        </button>
       </div>
     </div>
   </div>
